force-app/main/default/objects/Project_Task__c/Project_Task__c.object-meta.xml
<CustomObject>
    <label>Project Task</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Task No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>