force-app/main/default/objects/Project_Task__c/fields/Assigned_To1__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To1</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Project Tasks (Assigned To1)</relationshipLabel>
    <relationshipName>Project_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>