force-app/main/default/objects/Project_Task__c/fields/Available_hours__c.field-meta.xml
<CustomField>
    <fullName>Available_hours__c</fullName>
    <label>Available_hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>