force-app/main/default/objects/Project_Task__c/fields/Business_Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Expected_Completion_Date__c</fullName>
    <label>Business Expected Completion Date</label>
    <type>Date</type>
</CustomField>