force-app/main/default/objects/Project_Task__c/fields/Criticality__c.field-meta.xml
<CustomField>
    <fullName>Criticality__c</fullName>
    <label>Criticality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lowest</fullName>
            </value>
            <value>
                <fullName>Highest</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>