force-app/main/default/objects/Project_Task__c/fields/Current_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Task_Status__c</fullName>
    <label>Current Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requirement Gathering</fullName>
            </value>
            <value>
                <fullName>Documentation Work</fullName>
            </value>
            <value>
                <fullName>Development In Progress</fullName>
            </value>
            <value>
                <fullName>Development Completed</fullName>
            </value>
            <value>
                <fullName>Unit Testing Completed</fullName>
            </value>
            <value>
                <fullName>UAT In Progress</fullName>
            </value>
            <value>
                <fullName>UAT Completed</fullName>
            </value>
            <value>
                <fullName>Deployment Issue</fullName>
            </value>
            <value>
                <fullName>Task Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Business testing Completed</fullName>
                <isActive>false</isActive>
                <label>Business testing Completed</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Deployment Completed</fullName>
                <isActive>false</isActive>
                <label>Deployment Completed</label>
            </value>
            <value>
                <fullName>Document Waiting for Approval</fullName>
                <isActive>false</isActive>
                <label>Document Waiting for Approval</label>
            </value>
            <value>
                <fullName>Documentation Preparation</fullName>
                <isActive>false</isActive>
                <label>Documentation Preparation</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Pending Business Testing</fullName>
                <isActive>false</isActive>
                <label>Pending Business Testing</label>
            </value>
            <value>
                <fullName>Post Deployment Work</fullName>
                <isActive>false</isActive>
                <label>Post Deployment Work</label>
            </value>
            <value>
                <fullName>Testing In Progress</fullName>
                <isActive>false</isActive>
                <label>Testing In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>