force-app/main/default/objects/Project_Task__c/fields/Developer_s_Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Developer_s_Expected_Completion_Date__c</fullName>
    <description>Changed the label on 25th June 2025 to calculate the development duration time</description>
    <label>Development End Date</label>
    <type>Date</type>
</CustomField>