force-app/main/default/objects/Project_Task__c/fields/Development_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Development_Start_Date__c</fullName>
    <label>Development Start Date</label>
    <type>Date</type>
</CustomField>