force-app/main/default/objects/Project_Task__c/fields/Estimated_Effort_in_hrs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort_in_hrs__c</fullName>
    <inlineHelpText>This field calculates the Estimated Effort in business working hours for all active tasks (currently under Development), starting from the Development Start Date until the task status reaches &apos;Development Completed&apos;.</inlineHelpText>
    <label>Estimated Effort(in hrs)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>