force-app/main/default/objects/Project_Task__c/fields/Expected_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours__c</fullName>
    <description>Estimated actual working hours needed</description>
    <label>Expected Hours for Real Completion</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>