force-app/main/default/objects/Project_Task__c/fields/Hours_so_Far_consumed__c.field-meta.xml
<CustomField>
    <fullName>Hours_so_Far_consumed__c</fullName>
    <inlineHelpText>Calculate this field’s estimated effort in business working days, starting from the Development Start Date until the task status reaches &apos;Development Completed&apos;.</inlineHelpText>
    <label>Development hours so far consumed</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>