force-app/main/default/objects/Project_Task__c/fields/Is_New_Resource__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Resource__c</fullName>
    <formula>Projects__r.Resource__r.Is_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is New Resource</label>
    <type>Checkbox</type>
</CustomField>