force-app/main/default/objects/Project_Task__c/fields/Is_Working_on_Other_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Is_Working_on_Other_Tickets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Working on Other Tickets?</label>
    <type>Checkbox</type>
</CustomField>