force-app/main/default/objects/Project_Task__c/fields/Major_Risks_Blockers__c.field-meta.xml
<CustomField>
    <fullName>Major_Risks_Blockers__c</fullName>
    <label>Major Risks/Blockers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>