force-app/main/default/objects/Project_Task__c/fields/Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Modified_By__c</fullName>
    <label>Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>