force-app/main/default/objects/Project_Task__c/fields/Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date__c</fullName>
    <label>Modified Date</label>
    <type>DateTime</type>
</CustomField>