force-app/main/default/objects/Project_Task__c/fields/Project_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_Name__c</fullName>
    <formula>Projects__r.Name &amp; &quot; - &quot; &amp; TEXT(DATEVALUE(LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Task Name</label>
    <type>Text</type>
</CustomField>