force-app/main/default/objects/Project_Task__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projects</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Tasks (Projects)</relationshipLabel>
    <relationshipName>Project_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>