force-app/main/default/objects/Project_Task__c/fields/RAG__c.field-meta.xml
<CustomField>
    <fullName>RAG__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Real_Business_hours_needed__c),
        Real_Business_hours_needed__c &lt;= 0
    ),
    &quot;None&quot;,
    IF(
        Hours_so_Far_consumed__c &lt;= 2 * Real_Business_hours_needed__c,
        &quot;🟢 Green&quot;,
        IF(
            AND(
                Hours_so_Far_consumed__c &gt; 2 * Real_Business_hours_needed__c,
                Hours_so_Far_consumed__c &lt;= 3 * Real_Business_hours_needed__c
            ),
            &quot;🟠 Orange&quot;,
            &quot;🔴 Red&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG</label>
    <type>Text</type>
</CustomField>