force-app/main/default/objects/Project_Task__c/fields/Real_Business_hours_needed__c.field-meta.xml
<CustomField>
    <fullName>Real_Business_hours_needed__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This field is updated by the Manager according to the task&apos;s criticality.</inlineHelpText>
    <label>Real Business hours needed</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>