force-app/main/default/objects/Project_Task__c/fields/Requirement_Gathering_Competed__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Gathering_Competed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requirement Gathering Competed?</label>
    <type>Checkbox</type>
</CustomField>