force-app/main/default/objects/Project_Task__c/fields/Sharepoint_Id__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Id__c</fullName>
    <label>Sharepoint Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>