force-app/main/default/objects/Project_Task__c/fields/Task_Approver__c.field-meta.xml
<CustomField>
    <fullName>Task_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Approver</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Project Tasks (Task Approver)</relationshipLabel>
    <relationshipName>Project_Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>