force-app/main/default/objects/Project_Task__c/fields/Task_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Assignment_Date__c</fullName>
    <description>Activates task</description>
    <label>Task Assignment Date</label>
    <type>Date</type>
</CustomField>