force-app/main/default/objects/Project_Task__c/fields/Task_Score_del__c.field-meta.xml
<CustomField>
    <fullName>Task_Score_del__c</fullName>
    <label>Task Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>