force-app/main/default/objects/Project_Task__c/fields/Task_Testing_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Testing_Status__c</fullName>
    <label>Task Testing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <label>In Progress  🟠</label>
            </value>
            <value>
                <fullName>Pass</fullName>
                <label>Pass 🟢</label>
            </value>
            <value>
                <fullName>Fail</fullName>
                <label>Fail 🔴</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>