force-app/main/default/objects/Project_Task__c/fields/Testing_Date__c.field-meta.xml
<CustomField>
    <fullName>Testing_Date__c</fullName>
    <inlineHelpText>This field only using for Testing</inlineHelpText>
    <label>Testing Date</label>
    <type>Date</type>
</CustomField>