force-app/main/default/objects/Project_Task__c/fields/Testing_Hours_so_far_consumed__c.field-meta.xml
<CustomField>
    <fullName>Testing_Hours_so_far_consumed__c</fullName>
    <inlineHelpText>Calculates Testing Time in business hours (8 hrs/day), starting from when the task status changed to &quot;UAT In Progress&quot; until &quot;Task Completed&quot;, using field history tracking.</inlineHelpText>
    <label>Testing Hours so far consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>