force-app/main/default/objects/Project_Task__c/fields/Understanding_completed__c.field-meta.xml
<CustomField>
    <fullName>Understanding_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean status</description>
    <label>Understanding_completed?</label>
    <type>Checkbox</type>
</CustomField>