force-app/main/default/objects/Project_Task__c/validationRules/validate_for_Development_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_for_Development_Start_Date</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
  
    AND(
        NOT(ISBLANK(Development_Start_Date__c)),
        OR(
            NOT(Requirement_Gathering_Competed__c),
            NOT(Understanding_completed__c)
        )
    ),
    
    
    AND(
        NOT(ISNEW()),
        ISCHANGED(Development_Start_Date__c),
        NOT(ISBLANK(PRIORVALUE(Development_Start_Date__c)))
    )
)</errorConditionFormula>
    <errorDisplayField>Development_Start_Date__c</errorDisplayField>
    <errorMessage>Development Start Date can only be set after completing Requirement Gathering and Understanding. Once set, IT CANNOT BE CHANGED</errorMessage>
</ValidationRule>