force-app/main/default/objects/Project_Task__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Projects__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Sharepoint_Id__c</columns>
    <columns>Current_Task_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Created_Date__c</columns>
    <columns>Task_Assignment_Date__c</columns>
    <columns>Real_Business_hours_needed__c</columns>
    <columns>Description__c</columns>
    <columns>Hours_so_Far_consumed__c</columns>
    <columns>Estimated_Effort_in_hrs__c</columns>
    <columns>Developer_Name__c</columns>
    <columns>Assigned_To1__c</columns>
    <columns>RAG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Real_Business_hours_needed__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/2/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Current_Task_Status__c</field>
        <operation>notEqual</operation>
        <value>Development Completed,Testing In Progress,Unit Testing Completed,UAT In Progress,UAT Completed,Deployment Issue,Task Completed,Requirement Gathering,On Hold,Documentation Work</value>
    </filters>
    <label>Real business hours need Not Populated</label>
</ListView>