force-app/main/default/objects/Project_Task__c/listViews/Jatin.listView-meta.xml
<ListView>
    <fullName>Jatin</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>Assigned_To1__c</columns>
    <columns>Description__c</columns>
    <columns>Projects__c</columns>
    <columns>Current_Task_Status__c</columns>
    <columns>Development_Start_Date__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Understanding_completed__c</columns>
    <columns>Requirement_Gathering_Competed__c</columns>
    <columns>Is_Working_on_Other_Tickets__c</columns>
    <columns>Hours_so_Far_consumed__c</columns>
    <columns>Real_Business_hours_needed__c</columns>
    <columns>RAG__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Developer_Name__c</field>
        <operation>equals</operation>
        <value>Jatin Hada</value>
    </filters>
    <label>Jatin</label>
</ListView>